# vse

./: .gitignore  TODO.md  package-lock.json  vite.config.ts
src/: Editor.tsx  Sidebar.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
