[package]
name = "vse"
version = "0.1.0"
description = "VSE — Versioned Source Explorer"
edition = "2021"

## No library target; single binary with main.rs

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
notify = "6"
ignore = "0.4"
